--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ROM Viewer",
   "main": "index.js",
   "scripts": {
+    "build": "neu build",
     "configure": "node scripts/config.js",
-    "release": "npm run build && neu build",
     "start": "neu run",
     "update": "neu update"
   },
