--- a/templates/rom-viewer.settings.template.json
+++ b/templates/rom-viewer.settings.template.json
@@ -40,7 +40,7 @@
       "roms": []
     },
     "3DS": {
-      "emulatorPath": "DesMuMe/DeSmuME-VS2019-x64-Release.exe",
+      "emulatorPath": "Citra/citra-qt.exe",
       "roms": []
     },
     "Wii": {
