--- a/templates/rom-viewer.settings.template.jsonc
+++ b/templates/rom-viewer.settings.template.jsonc
@@ -1,4 +1,11 @@
 {
+  "appSettings": {
+    "coverFontSize": "1.25em",
+    "coverWidth": "192px",
+    "maxColumns": 7,
+    "minCoverHeight": "136px",
+    "showRomCount": true
+  },
   "romPath": "",
   "coverPath": "",
   "emulatorPath": "",
