--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
-/node_modules
-
-# Developer tools' files
-.lite_workspace.lua
-
-# Neutralinojs binaries and builds
-/bin
-/dist
-.tmp
-
-# Neutralinojs client (minified)
-neutralino.js
-
-# Neutralinojs related files
-.storage
+# Build files #
 *.log
+/build
+/bundle
+/node_modules
 
 # Setting files
 rom-viewer.settings.js
