Extracted some shared logic. Updated styles and readme.

--- a/templates/rom-viewer.settings.template.jsonc
+++ b/templates/rom-viewer.settings.template.jsonc
@@ -5,7 +5,9 @@
     "coverWidth": "192px",
     "maxColumns": 7,
     "minCoverHeight": "136px",
-    "showRomCount": true
+    "showRomCount": true,
+    "showShadows": true,
+    "sidebarWidth": "192px"
   },
   "romPath": "",
   "coverPath": "",
