Added theme setting.

--- a/templates/rom-viewer.settings.template.jsonc
+++ b/templates/rom-viewer.settings.template.jsonc
@@ -7,7 +7,8 @@
     "minCoverHeight": "136px",
     "showRomCount": true,
     "showShadows": true,
-    "sidebarWidth": "192px"
+    "sidebarWidth": "192px",
+    "theme": "windows"
   },
   "romPath": "",
   "coverPath": "",
